<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoestore.ui.WelcomeFragment">


    <!-- i used LinearLayout here because the layout is simple-->
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCDCD"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="10dp">


        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="10dp"
        android:text="@string/welcom"
        android:textColor="#2A789C"
        android:textSize="45sp"
        app:fontFamily="sans-serif-condensed"
        app:textAllCaps="true" />

    <Button
        android:id="@+id/next1"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next"
        android:textColor="#FBE9E7" />
</LinearLayout>
</layout>